Feat: capsule 통합 endpoint 추가, pcapsule query string 이름 변경
