# src/app/Capsule/capsuleRoute.js
@@ -1,16 +1,22 @@
 import express from "express";
 import asyncHandler from "express-async-handler";
 import { tokenAuthMiddleware } from "../../../config/tokenAuthMiddleware";
-import { getCapsules, readCapsuleByType } from "./capsuleController";
+import {
+	getOwnCapsules,
+	readCapsuleByType,
+	readCapsuleDetail,
+} from "./capsuleController";
 
 export const capsuleRouter = express.Router();
 
-// 캡슐번호 조회 - p캡슐인지 r캡슐인지 구분할 수 있도록
+// 캡슐번호 조회
 capsuleRouter.get("/retrieve", asyncHandler(readCapsuleByType));
+
+capsuleRouter.get("/retrieve/detail", asyncHandler(readCapsuleDetail));
 
 // 유저의 전체 캡슐 가져오기
 capsuleRouter.get(
-	"retrieve/all",
+	"/retrieve/all",
 	tokenAuthMiddleware,
-	asyncHandler(getCapsules),
+	asyncHandler(getOwnCapsules),
 );
