# swagger/rememorySwagger.yaml
@@ -1,4 +1,123 @@
 paths:
+  /capsule/retrieve:
+    get:
+      tags:
+        - Capsule
+      summary: 캡슐 조회
+      parameters:
+        - in: query
+          name: capsule_number
+          required: true
+          description: Capsule number
+          schema:
+            type: string
+            example: "testMember1_74177"
+        - in: query
+          name: capsule_password
+          required: true
+          description: Password for the pcapsule
+          schema:
+            type: integer
+            example: 123456
+      responses:
+        "200":
+          description: 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+
+  /capsule/retrieve/detail:
+    get:
+      tags:
+        - Capsule
+      summary: 캡슐 상세 조회
+      parameters:
+        - in: query
+          name: capsule_number
+          required: true
+          description: Capsule number
+          schema:
+            type: string
+            example: "testMember1_74177"
+        - in: query
+          name: capsule_password
+          required: true
+          description: Password for the pcapsule
+          schema:
+            type: integer
+            example: 123456
+      responses:
+        "200":
+          description: 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+
+  /capsule/retrieve/all:
+    get:
+      tags:
+        - Capsule
+      summary: 자신의 캡슐 전체 조회
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          description: userId
+          schema:
+            type: integer
+            example: 1
+      responses:
+        "200":
+          description: 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  isSuccess:
+                    type: boolean
+                    example: true
+                  code:
+                    type: integer
+                    example: 2000
+                  message:
+                    type: string
+                    example: "success!"
+                  result:
+                    type: array
+                    example:
+                      [{ capsule_name: "타임캡슐", capsule_number: test_1234 }]
   /pcapsule/create:
     post:
       tags:
